Added another option

--- a/index.html
+++ b/index.html
@@ -67,9 +67,8 @@
         "NordVPN",
         "hackersuse.com",
         "Hostnames",
+        "Packets",
     ];
-
-
 
     var randomDiv = document.getElementById("object");
 
