--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         "hackersuse.com",
         "Hostnames",
         "Packets",
+	"vuln-2000",
     ];
 
     var randomDiv = document.getElementById("object");
