feat: Move to GitHub Actions

--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
 </body>
 <script type="text/javascript" charset="utf-8">
     var randomStrings = [
-        "Bluetooth",
         "Jira",
         "All the things", 
         "Laptops",
@@ -68,7 +67,10 @@
         "hackersuse.com",
         "Hostnames",
         "Packets",
-	"vuln-2000",
+	      "vuln-2000",
+        "Cables",
+        "Wi-Fi",
+        "Windows",
     ];
 
     var randomDiv = document.getElementById("object");
